wip. refactor to allow PIT usage to handle sequence of duplicate sort keys